fixed mobile z-index issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -63,7 +63,7 @@ HEADER
 	width: 100%;
 	height: 54px;
 	background: #EFEEEA;
-	z-index: 999;
+	z-index: 99;
 }
 
 #main-nav ul {
@@ -88,6 +88,7 @@ HEADER
 	min-width: 160px;
 }
 */
+
 
 /*--------------------------------------------
 BODY
